feat: support vlan/bond in v1, vlan in v2 for nocloud
Fixes #9753

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 852baf819d453a3d8d58ae9f029e280ae75e0cb1)

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v2-serverscom.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/expected-v2-serverscom.yaml
@@ -1,41 +1,33 @@
 addresses:
-    - address: 192.168.14.2/24
-      linkName: eth0
+    - address: 188.42.48.188/29
+      linkName: agge
       family: inet4
       scope: global
       flags: permanent
       layer: platform
-    - address: 2001:1::1/64
-      linkName: eth0
-      family: inet6
-      scope: global
-      flags: permanent
-      layer: platform
-    - address: 10.22.14.2/32
-      linkName: eth1
-      family: inet4
-      scope: global
-      flags: permanent
-      layer: platform
-    - address: 10.10.4.140/29
-      linkName: bond0
-      family: inet4
-      scope: global
-      flags: permanent
-      layer: platform
-    - address: 192.34.34.34/32
-      linkName: bond0.4
+    - address: 10.26.98.92/29
+      linkName: aggi
       family: inet4
       scope: global
       flags: permanent
       layer: platform
 links:
-    - name: eth0
+    - name: eno1np0
       logical: false
       up: true
       mtu: 0
       kind: ""
       type: netrom
+      masterName: agge
+      layer: platform
+    - name: eno2np1
+      logical: false
+      up: true
+      mtu: 0
+      kind: ""
+      type: netrom
+      masterName: agge
+      slaveIndex: 1
       layer: platform
     - name: eth1
       logical: false
@@ -43,14 +35,7 @@ links:
       mtu: 0
       kind: ""
       type: netrom
-      layer: platform
-    - name: eth1
-      logical: false
-      up: true
-      mtu: 0
-      kind: ""
-      type: netrom
-      masterName: bond0
+      masterName: aggi
       layer: platform
     - name: eth2
       logical: false
@@ -58,19 +43,19 @@ links:
       mtu: 0
       kind: ""
       type: netrom
-      masterName: bond0
+      masterName: aggi
       slaveIndex: 1
       layer: platform
-    - name: bond0
+    - name: agge
       logical: true
       up: true
-      mtu: 1500
+      mtu: 0
       kind: bond
       type: ether
       bondMaster:
         mode: 802.3ad
         xmitHashPolicy: layer3+4
-        lacpRate: fast
+        lacpRate: slow
         arpValidate: none
         arpAllTargets: any
         primaryReselect: always
@@ -85,23 +70,36 @@ links:
         tlbLogicalLb: 1
         adActorSysPrio: 65535
       layer: platform
-    - name: bond0.4
+    - name: aggi
       logical: true
       up: true
-      mtu: 1500
-      kind: vlan
+      mtu: 0
+      kind: bond
       type: ether
-      parentName: bond0
-      vlan:
-        vlanID: 4
-        vlanProtocol: 802.1q
+      bondMaster:
+        mode: 802.3ad
+        xmitHashPolicy: layer3+4
+        lacpRate: slow
+        arpValidate: none
+        arpAllTargets: any
+        primaryReselect: always
+        failOverMac: 0
+        miimon: 100
+        updelay: 200
+        downdelay: 200
+        resendIgmp: 1
+        lpInterval: 1
+        packetsPerSlave: 1
+        numPeerNotif: 1
+        tlbLogicalLb: 1
+        adActorSysPrio: 65535
       layer: platform
 routes:
     - family: inet4
       dst: ""
       src: ""
-      gateway: 192.168.14.1
-      outLinkName: eth0
+      gateway: 188.42.48.187
+      outLinkName: agge
       table: main
       priority: 1024
       scope: global
@@ -109,47 +107,11 @@ routes:
       flags: ""
       protocol: static
       layer: platform
-    - family: inet6
-      dst: ""
-      src: ""
-      gateway: 2001:1::2
-      outLinkName: eth0
-      table: main
-      priority: 2048
-      scope: global
-      type: unicast
-      flags: ""
-      protocol: static
-      layer: platform
-    - family: inet4
-      dst: ""
-      src: ""
-      gateway: 192.168.14.1
-      outLinkName: eth1
-      table: main
-      priority: 100
-      scope: global
-      type: unicast
-      flags: ""
-      protocol: static
-      layer: platform
-    - family: inet4
-      dst: 192.168.14.1/32
-      src: 10.22.14.2
-      gateway: ""
-      outLinkName: eth1
-      table: main
-      priority: 100
-      scope: link
-      type: unicast
-      flags: ""
-      protocol: static
-      layer: platform
     - family: inet4
       dst: 10.0.0.0/8
       src: ""
-      gateway: 10.10.4.147
-      outLinkName: bond0
+      gateway: 10.26.98.91
+      outLinkName: aggi
       table: main
       priority: 1024
       scope: global
@@ -160,8 +122,8 @@ routes:
     - family: inet4
       dst: 192.168.0.0/16
       src: ""
-      gateway: 10.10.4.147
-      outLinkName: bond0
+      gateway: 10.26.98.91
+      outLinkName: aggi
       table: main
       priority: 1024
       scope: global
@@ -172,8 +134,8 @@ routes:
     - family: inet4
       dst: 188.42.208.0/21
       src: ""
-      gateway: 10.10.4.147
-      outLinkName: bond0
+      gateway: 10.26.98.91
+      outLinkName: aggi
       table: main
       priority: 1024
       scope: global
@@ -185,20 +147,9 @@ hostnames:
     - hostname: talos
       domainname: fqdn
       layer: platform
-resolvers:
-    - dnsServers:
-        - 8.8.8.8
-        - 1.1.1.1
-        - 2.2.2.2
-      layer: platform
+resolvers: []
 timeServers: []
-operators:
-    - operator: dhcp4
-      linkName: eth0
-      requireUp: true
-      dhcp4:
-        routeMetric: 1024
-      layer: platform
+operators: []
 externalIPs: []
 metadata:
     platform: nocloud
