test: fix user namespace test, TPM2 fixes
Make sure the test runs on a specific node, wait for swtpm to be up.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/integration/k8s/testdata/usernamespace.yaml
+++ b/internal/integration/k8s/testdata/usernamespace.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: default
 spec:
   hostUsers: false
+  nodeName: $NODE$
   containers:
   - name: userns
     command: ["/bin/sh", "-c", "--"]
