--- a/hack/release.toml
+++ b/hack/release.toml
@@ -7,7 +7,7 @@ match_deps = "^github.com/((talos-systems|siderolabs)/[a-zA-Z0-9-]+)$"
 ignore_deps = ["github.com/coredns/coredns"]
 
 # previous release
-previous = "v1.8.2"
+previous = "v1.8.3"
 
 pre_release = false
 
@@ -28,11 +28,11 @@ All other release assets can be downloaded from [Image Factory](https://www.talo
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.6.60
-containerd: 2.0.0
-runc: 1.2.1
+Linux: 6.6.64
+runc: 1.2.3
+Kubernetes: 1.31.4
 
-Talos is built with Go 1.22.9.
+Talos is built with Go 1.22.10.
 """
 
 [make_deps]
