feat: update Kubernetes to 1.32.0
Final Kubernetes release for Talos 1.9.0.

Also update COSI to pull in a fix for watch restarts:
https://github.com/cosi-project/runtime/pull/512

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit d45e8d1d1da28ca1b311198588d723cb491527eb)

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -21,8 +21,8 @@ preface = """
 * Linux: 6.12.4
 * containerd: 2.0.0
 * Flannel: 0.26.1
-* Kubernetes: 1.32.0-rc.1
-* runc: 1.2.2
+* Kubernetes: 1.32.0
+* runc: 1.2.3
 * CoreDNS: 1.12.0
 
 Talos is built with Go 1.23.4.
