--- a/hack/release.toml
+++ b/hack/release.toml
@@ -21,7 +21,7 @@ preface = """
 * Linux: 6.12.4
 * containerd: 2.0.0
 * Flannel: 0.26.1
-* Kubernetes: 1.32.0-rc.1
+* Kubernetes: 1.32.0
 * runc: 1.2.3
 * CoreDNS: 1.12.0
 
