fix: match MAC addresses case-insensitive (nocloud)
Fixes #9965

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit ec2e24fd9617db34e3bec753b5fe720670fa31a4)

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/metadata-v2-serverscom.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/nocloud/testdata/metadata-v2-serverscom.yaml
@@ -43,7 +43,7 @@ ethernets:
       macaddress: 68:05:ca:b8:f1:f9
   ext0:
     match:
-      macaddress: 3c:ec:ef:e0:45:28
+      macaddress: 3c:ec:EF:e0:45:28
   ext1:
     match:
-      macaddress: 3c:ec:ef:e0:45:29
+      macaddress: 3c:EC:ef:e0:45:29
