fix: renovate typo
Fix kres typo.

Signed-off-by: Noel Georgi <git@frezbo.dev>
(cherry picked from commit 0ef19171f738e46346dfae71f43b8f7b47bf257d)

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -2217,7 +2217,7 @@ spec:
       matchStrings:
         - '# syntax = docker\/dockerfile-upstream:(?<currentValue>.*)'
       depNameTemplate: docker/dockerfile-upstream
-      dataSourceTemplate: docker
+      datasourceTemplate: docker
       versioningTemplate: docker
   packageRules:
     - enabled: false
