--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-12-12T16:40:08Z by kres 8183c20.
+# Generated on 2024-12-17T10:40:00Z by kres 318187b.
 
 name: default
 concurrency:
@@ -592,7 +592,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.9
           repository: siderolabs/extensions
       - name: set variables
         run: |
@@ -746,7 +746,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.9
           repository: siderolabs/extensions
       - name: set variables
         run: |
@@ -1438,7 +1438,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.9
           repository: siderolabs/extensions
       - name: unshallow-extensions
         run: |
@@ -3022,7 +3022,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.9
           repository: siderolabs/extensions
       - name: set variables
         run: |
