--- a/.github/workflows/integration-extensions-cron.yaml
+++ b/.github/workflows/integration-extensions-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-12-04T12:34:25Z by kres 232fe63.
+# Generated on 2024-12-17T10:40:00Z by kres 318187b.
 
 name: integration-extensions-cron
 concurrency:
@@ -86,7 +86,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.9
           repository: siderolabs/extensions
       - name: unshallow-extensions
         run: |
