--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1038,7 +1038,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.9
             path: _out/extensions
         - name: unshallow-extensions
           nonMakeStep: true
@@ -1379,7 +1379,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.9
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -1839,7 +1839,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.9
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -1936,7 +1936,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.9
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
