--- a/website/config.toml
+++ b/website/config.toml
@@ -113,7 +113,7 @@ version_menu = "Releases"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "/v1.8"
+url_latest_version = "/v1.9"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/siderolabs/talos"
@@ -142,11 +142,11 @@ prism_syntax_highlighting = false
 
 [[params.versions]]
 url = "/v1.9/"
-version = "v1.9 (pre-release)"
+version = "v1.9 (latest)"
 
 [[params.versions]]
 url = "/v1.8/"
-version = "v1.8 (latest)"
+version = "v1.8"
 
 [[params.versions]]
 url = "/v1.7/"
