--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,7 +18,8 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-* Linux: 6.12.5
+* Linux: 6.12.6
+* CNI plugins: 1.6.1
 
 Talos is built with Go 1.23.4.
 """
