--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,8 +18,9 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-* Linux: 6.12.6
+* Linux: 6.12.8
 * CNI plugins: 1.6.1
+* runc: 1.2.4
 
 Talos is built with Go 1.23.4.
 """
