--- a/hack/release.toml
+++ b/hack/release.toml
@@ -54,6 +54,12 @@ cluster:
 Usage of `authorization-mode` CLI argument will not support this form of customization.
 """
 
+    [notes.auditd]
+        title = "auditd"
+        description = """\
+Kernel parameter `talos.auditd.disabled=1` can be used to disable Talos built-in `auditd` service.
+"""
+
 [make_deps]
 
     [make_deps.tools]
