--- a/hack/release.toml
+++ b/hack/release.toml
@@ -20,6 +20,7 @@ preface = """
         description = """\
 * Linux: 6.12.9
 * runc: 1.2.4
+* containerd: 2.0.2
 
 Talos is built with Go 1.23.4.
 """
