--- a/.github/workflows/integration-qemu-csi-openebs-cron.yaml
+++ b/.github/workflows/integration-qemu-csi-openebs-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-01-16T04:17:04Z by kres 3b3f992.
+# Generated on 2025-01-16T11:00:37Z by kres 3b3f992.
 
 name: integration-qemu-csi-openebs-cron
 concurrency:
@@ -101,4 +101,5 @@ jobs:
           path: |-
             /tmp/logs-*.tar.gz
             /tmp/support-*.zip
+            /tmp/fio-*.json
           retention-days: "5"
